--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: groundhao
 header-img: "img/twitter.jpg"
 tagline: "cn"  
-description: "落笔画代码"  
+description: "踏实的学习,好好的积累"  
 baseurl: ""
 url: "http://groundhao"  
 
